zetasql/parser/testdata/expression_subquery.test
# Four types of expression subqueries.
select (select 1), EXISTS(select 2), ARRAY(select 3)
from T
--
QueryStatement [0-59]
  Query [0-59]
    Select [0-59]
      SelectList [7-52]
        SelectColumn [7-17]
          ExpressionSubquery [7-17]
            Query [8-16]
              Select [8-16]
                SelectList [15-16]
                  SelectColumn [15-16]
                    IntLiteral(1) [15-16]
        SelectColumn [19-35]
          ExpressionSubquery(modifier=EXISTS) [19-35]
            Query [26-34]
              Select [26-34]
                SelectList [33-34]
                  SelectColumn [33-34]
                    IntLiteral(2) [33-34]
        SelectColumn [37-52]
          ExpressionSubquery(modifier=ARRAY) [37-52]
            Query [43-51]
              Select [43-51]
                SelectList [50-51]
                  SelectColumn [50-51]
                    IntLiteral(3) [50-51]
      FromClause [53-59]
        TablePathExpression [58-59]
          PathExpression [58-59]
            Identifier(T) [58-59]
--
SELECT
  (
    SELECT
      1
  ),
  EXISTS(
    SELECT
      2
  ),
  ARRAY(
    SELECT
      3
  )
FROM
  T
==

# These don't parse as functions.
select EXISTS(1)
--
ERROR: Syntax error: Expected "(" or keyword SELECT or keyword WITH but got integer literal "1" [at 1:15]
select EXISTS(1)
              ^
==

select ARRAY(1+2)
--

ERROR: Syntax error: Expected "(" or keyword SELECT or keyword WITH but got integer literal "1" [at 1:14]
select ARRAY(1+2)
             ^
==

select (((select 3) + (select x.y from z) + (select (1+2) from z)))
--
QueryStatement [0-67]
  Query [0-67]
    Select [0-67]
      SelectList [7-67]
        SelectColumn [7-67]
          BinaryExpression(+) [9-65]
            BinaryExpression(+) [9-41]
              ExpressionSubquery [9-19]
                Query [10-18]
                  Select [10-18]
                    SelectList [17-18]
                      SelectColumn [17-18]
                        IntLiteral(3) [17-18]
              ExpressionSubquery [22-41]
                Query [23-40]
                  Select [23-40]
                    SelectList [30-33]
                      SelectColumn [30-33]
                        PathExpression [30-33]
                          Identifier(x) [30-31]
                          Identifier(y) [32-33]
                    FromClause [34-40]
                      TablePathExpression [39-40]
                        PathExpression [39-40]
                          Identifier(z) [39-40]
            ExpressionSubquery [44-65]
              Query [45-64]
                Select [45-64]
                  SelectList [52-57]
                    SelectColumn [52-57]
                      BinaryExpression(+) [53-56]
                        IntLiteral(1) [53-54]
                        IntLiteral(2) [55-56]
                  FromClause [58-64]
                    TablePathExpression [63-64]
                      PathExpression [63-64]
                        Identifier(z) [63-64]
--
SELECT
  ((
    SELECT
      3
  ) + (
    SELECT
      x.y
    FROM
      z
  ) + (
    SELECT
      (1 + 2)
    FROM
      z
  ))
==

select (select (select 1))
--
QueryStatement [0-26]
  Query [0-26]
    Select [0-26]
      SelectList [7-26]
        SelectColumn [7-26]
          ExpressionSubquery [7-26]
            Query [8-25]
              Select [8-25]
                SelectList [15-25]
                  SelectColumn [15-25]
                    ExpressionSubquery [15-25]
                      Query [16-24]
                        Select [16-24]
                          SelectList [23-24]
                            SelectColumn [23-24]
                              IntLiteral(1) [23-24]
--
SELECT
  (
    SELECT
      (
        SELECT
          1
      )
  )
==

# Expression subquery modifiers not allowed in FROM clause.
select x from ARRAY(select 1)
--
ERROR: Syntax error: Unexpected keyword ARRAY [at 1:15]
select x from ARRAY(select 1)
              ^
==

select (select 1), ARRAY(select 2)
from T
where (select 3) = (select 4)
group by (select 5), EXISTS(select 6)
--
QueryStatement [0-109]
  Query [0-109]
    Select [0-109]
      SelectList [7-34]
        SelectColumn [7-17]
          ExpressionSubquery [7-17]
            Query [8-16]
              Select [8-16]
                SelectList [15-16]
                  SelectColumn [15-16]
                    IntLiteral(1) [15-16]
        SelectColumn [19-34]
          ExpressionSubquery(modifier=ARRAY) [19-34]
            Query [25-33]
              Select [25-33]
                SelectList [32-33]
                  SelectColumn [32-33]
                    IntLiteral(2) [32-33]
      FromClause [35-41]
        TablePathExpression [40-41]
          PathExpression [40-41]
            Identifier(T) [40-41]
      WhereClause [42-71]
        BinaryExpression(=) [48-71]
          ExpressionSubquery [48-58]
            Query [49-57]
              Select [49-57]
                SelectList [56-57]
                  SelectColumn [56-57]
                    IntLiteral(3) [56-57]
          ExpressionSubquery [61-71]
            Query [62-70]
              Select [62-70]
                SelectList [69-70]
                  SelectColumn [69-70]
                    IntLiteral(4) [69-70]
      GroupBy [72-109]
        GroupingItem [81-91]
          ExpressionSubquery [81-91]
            Query [82-90]
              Select [82-90]
                SelectList [89-90]
                  SelectColumn [89-90]
                    IntLiteral(5) [89-90]
        GroupingItem [93-109]
          ExpressionSubquery(modifier=EXISTS) [93-109]
            Query [100-108]
              Select [100-108]
                SelectList [107-108]
                  SelectColumn [107-108]
                    IntLiteral(6) [107-108]
--
SELECT
  (
    SELECT
      1
  ),
  ARRAY(
    SELECT
      2
  )
FROM
  T
WHERE
  (
    SELECT
      3
  ) = (
    SELECT
      4
  )
GROUP BY(
    SELECT
      5
  ), EXISTS(
    SELECT
      6
  )
==

select EXISTS(select 1 union all select 2)
--
QueryStatement [0-42]
  Query [0-42]
    Select [0-42]
      SelectList [7-42]
        SelectColumn [7-42]
          ExpressionSubquery(modifier=EXISTS) [7-42]
            Query [14-41]
              SetOperation(UNION ALL) [14-41]
                Select [14-22]
                  SelectList [21-22]
                    SelectColumn [21-22]
                      IntLiteral(1) [21-22]
                Select [33-41]
                  SelectList [40-41]
                    SelectColumn [40-41]
                      IntLiteral(2) [40-41]
--
SELECT
  EXISTS(
    SELECT
      1
    UNION ALL
    SELECT
      2
  )
==

# Original test case for b/32403185.
select *
from (SELECT 1) AS singlerowscan_1
WHERE
  EXISTS(
    SELECT
      CAST(- 90.21638073702843 AS FLOAT64) AS a_3
    FROM (SELECT 1) AS singlerowscan_2
    WHERE false
  ) IN ({{exists|array|}}(SELECT 1));
--
ALTERNATION GROUP: exists
--
QueryStatement [0-201]
  Query [0-201]
    Select [0-201]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TableSubquery [14-43]
          Query [15-23]
            Select [15-23]
              SelectList [22-23]
                SelectColumn [22-23]
                  IntLiteral(1) [22-23]
          Alias [25-43]
            Identifier(singlerowscan_1) [28-43]
      WhereClause [44-201]
        InExpression(IN) [180-201]
          ExpressionSubquery(modifier=EXISTS) [52-179]
            Query [64-175]
              Select [64-175]
                SelectList [77-120]
                  SelectColumn [77-120]
                    CastExpression [77-113]
                      UnaryExpression(-) [82-101]
                        FloatLiteral(90.21638073702843) [84-101]
                      SimpleType [105-112]
                        PathExpression [105-112]
                          Identifier(FLOAT64) [105-112]
                    Alias [114-120]
                      Identifier(a_3) [117-120]
                FromClause [125-159]
                  TableSubquery [130-159]
                    Query [131-139]
                      Select [131-139]
                        SelectList [138-139]
                          SelectColumn [138-139]
                            IntLiteral(1) [138-139]
                    Alias [141-159]
                      Identifier(singlerowscan_2) [144-159]
                WhereClause [164-175]
                  BooleanLiteral(false) [170-175]
          InList [184-200]
            ExpressionSubquery(modifier=EXISTS) [184-200]
              Query [191-199]
                Select [191-199]
                  SelectList [198-199]
                    SelectColumn [198-199]
                      IntLiteral(1) [198-199]
--
SELECT
  *
FROM
  (
    SELECT
      1
  ) AS singlerowscan_1
WHERE
  EXISTS(
    SELECT
      CAST(- 90.21638073702843 AS FLOAT64) AS a_3
    FROM
      (
        SELECT
          1
      ) AS singlerowscan_2
    WHERE
      false
  ) IN (EXISTS(
      SELECT
        1
    ))
--
ALTERNATION GROUP: array
--
QueryStatement [0-200]
  Query [0-200]
    Select [0-200]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TableSubquery [14-43]
          Query [15-23]
            Select [15-23]
              SelectList [22-23]
                SelectColumn [22-23]
                  IntLiteral(1) [22-23]
          Alias [25-43]
            Identifier(singlerowscan_1) [28-43]
      WhereClause [44-200]
        InExpression(IN) [180-200]
          ExpressionSubquery(modifier=EXISTS) [52-179]
            Query [64-175]
              Select [64-175]
                SelectList [77-120]
                  SelectColumn [77-120]
                    CastExpression [77-113]
                      UnaryExpression(-) [82-101]
                        FloatLiteral(90.21638073702843) [84-101]
                      SimpleType [105-112]
                        PathExpression [105-112]
                          Identifier(FLOAT64) [105-112]
                    Alias [114-120]
                      Identifier(a_3) [117-120]
                FromClause [125-159]
                  TableSubquery [130-159]
                    Query [131-139]
                      Select [131-139]
                        SelectList [138-139]
                          SelectColumn [138-139]
                            IntLiteral(1) [138-139]
                    Alias [141-159]
                      Identifier(singlerowscan_2) [144-159]
                WhereClause [164-175]
                  BooleanLiteral(false) [170-175]
          InList [184-199]
            ExpressionSubquery(modifier=ARRAY) [184-199]
              Query [190-198]
                Select [190-198]
                  SelectList [197-198]
                    SelectColumn [197-198]
                      IntLiteral(1) [197-198]
--
SELECT
  *
FROM
  (
    SELECT
      1
  ) AS singlerowscan_1
WHERE
  EXISTS(
    SELECT
      CAST(- 90.21638073702843 AS FLOAT64) AS a_3
    FROM
      (
        SELECT
          1
      ) AS singlerowscan_2
    WHERE
      false
  ) IN (ARRAY(
      SELECT
        1
    ))
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-195]
  Query [0-195]
    Select [0-195]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TableSubquery [14-43]
          Query [15-23]
            Select [15-23]
              SelectList [22-23]
                SelectColumn [22-23]
                  IntLiteral(1) [22-23]
          Alias [25-43]
            Identifier(singlerowscan_1) [28-43]
      WhereClause [44-195]
        InExpression(IN) [180-195]
          ExpressionSubquery(modifier=EXISTS) [52-179]
            Query [64-175]
              Select [64-175]
                SelectList [77-120]
                  SelectColumn [77-120]
                    CastExpression [77-113]
                      UnaryExpression(-) [82-101]
                        FloatLiteral(90.21638073702843) [84-101]
                      SimpleType [105-112]
                        PathExpression [105-112]
                          Identifier(FLOAT64) [105-112]
                    Alias [114-120]
                      Identifier(a_3) [117-120]
                FromClause [125-159]
                  TableSubquery [130-159]
                    Query [131-139]
                      Select [131-139]
                        SelectList [138-139]
                          SelectColumn [138-139]
                            IntLiteral(1) [138-139]
                    Alias [141-159]
                      Identifier(singlerowscan_2) [144-159]
                WhereClause [164-175]
                  BooleanLiteral(false) [170-175]
          Query [184-194]
            Query [185-193]
              Select [185-193]
                SelectList [192-193]
                  SelectColumn [192-193]
                    IntLiteral(1) [192-193]
--
SELECT
  *
FROM
  (
    SELECT
      1
  ) AS singlerowscan_1
WHERE
  EXISTS(
    SELECT
      CAST(- 90.21638073702843 AS FLOAT64) AS a_3
    FROM
      (
        SELECT
          1
      ) AS singlerowscan_2
    WHERE
      false
  ) IN ((
    SELECT
      1
    ))
==

# A query mistakenly attempts to use a table subquery as an argument to the CAST
# function. The parser helps detect this case and return a reasonable error.
select cast(select key from keyvalue)
--
ERROR: The argument to CAST is an expression, not a query; to use a query as an expression, the query must be wrapped with additional parentheses to make it a scalar subquery expression [at 1:13]
select cast(select key from keyvalue)
            ^
==

# A query mistakenly attempts to use a table subquery as an argument to the
# SAFE_CAST function. The parser helps detect this case and return a reasonable
# error.
select safe_cast(select key from keyvalue)
--
ERROR: The argument to SAFE_CAST is an expression, not a query; to use a query as an expression, the query must be wrapped with additional parentheses to make it a scalar subquery expression [at 1:18]
select safe_cast(select key from keyvalue)
                 ^
